# openlogprobs

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
open_logprobs/: __init__.py  extract.py  models.py  utils.py
open_logprobs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
openlogprobs/: extract.py  models.py  utils.py
test/: test_logprobs.py
